--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "author": "LordHelmchen84",
   "main": [
-    "dist/angular-schema-form-ui-datepicker.min.js"
+    "dist/angular-schema-form-ui-datepicker.js"
   ],
   "keywords": [
     "angular-schema-form",
@@ -21,9 +21,15 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
-    "angular-schema-form": "^0.8.13",
-    "angular-schema-form-bootstrap": "^0.2.0",
-    "bootstrap": "^3.3.7"
+  "devDependencies": {},
+  "dependencies": {
+    "angular-schema-form": "v1.0.0-alpha.2",
+    "angular-schema-form-bootstrap": "develop",
+    "bootstrap": "^3.3.7",
+    "angular-bootstrap": "^2.5.0"
+  },
+  "resolutions": {
+    "angular-schema-form": "v1.0.0-alpha.2",
+    "angular-schema-form-bootstrap": "develop"
   }
 }
