--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-schema-form-bootstrap": "develop",
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.5.0",
-    "angular-translate": "^2.15.1"
+    "angular-translate": "^2.15.1",
+    "moment": "^2.18.1"
   },
   "resolutions": {
     "angular-schema-form": "v1.0.0-alpha.2",
