--- a/bower.json
+++ b/bower.json
@@ -28,10 +28,11 @@
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.5.0",
     "angular-translate": "^2.15.1",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "angular": "^1.6.4"
   },
   "resolutions": {
-    "angular-schema-form": "v1.0.0-alpha.2",
+    "angular-schema-form": "1.0.0-alpha.4",
     "angular-schema-form-bootstrap": "develop"
   }
 }
